# vagas-dev

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  main.py  nginx.conf  pyproject.toml  requirements.txt  zensical.toml
.github/: dependabot.yml
.github/workflows/: build.yml  deploy.yml  docs.yml  test.yml
backend/: Dockerfile  entrypoint.sh
backend/app/: enum.py  keywords.py  main.py  models.py  notifiers.py  scheduler.py  utils.py
backend/app/api/routes/: job.py
backend/app/core/: database.py  settings.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 02e9dcf05ee9_create_discord_notified_column_on_table_.py  15512330ea64_create_jobs_table.py  6cccb8dedec7_create_level_column_on_table_jobs.py  72de72a7f13e_create_telegram_notified_column_on_.py  743ad74ddd17_create_for_pcd_column_on_table_jobs.py  a0aedd83b6f1_create_keyword_column_on_table_jobs.py  ba563ed5b8f1_create_notified_column_on_table_jobs.py  ca947765ca3c_update_columns_of_table_jobs.py
backend/app/notifiers/: __init__.py
backend/app/schemas/: health.py  job.py
backend/app/scrapers/: __init__.py  base.py  gupy.py  linkedin.py
backend/app/wrappers/: discord_bot.py  telegram.py
backend/tests/: conftest.py  test_db.py
backend/tests/api/routes/: test_health.py  test_job.py
backend/tests/http_requests/: test_gupy_scraper.py
backend/tests/wrappers/: test_telegram.py
changelogs/: +0d6d3a27.core.md  +1909c92b.bump.md  +1f4eadfb.feat.md  +2007c8ad.bump.md  +3f0ac377.doc.md  +4673e03b.bugfix.md  +4893f81c.bump.md  +58cd33fd.bump.md  +5dbc31e5.core.md  +79b5afa2.bugfix.md  +82a5a2f9.bump.md  +906e9e05.feat.md  +92a182ce.bugfix.md  +954dbab1.core.md  +9a287500.bump.md  +9a8e6a28.core.md  +a152062e.feat.md  +add6a204.doc.md  +baf1712a.feat.md  +c2e2145c.doc.md  +cb159e6e.feat.md  1.feat.md  14.feat.md  15.feat.md  3.feat.md  4.feat.md  5.doc.md  6.feat.md  7.doc.md  8.feat.md
docs/: changelog.md  do-it-yourself.md  index.md  license.md  roadmap.md
docs/api/: endpoints.md  index.md
docs/stylesheets/: extra.css
frontend/: Dockerfile  next.config.mjs  package.json
frontend/app/: globals.css  layout.js  page.js
frontend/components/: Filters.js  Header.js  JobCard.js  JobDetail.js
frontend/lib/: api.js  constants.js
scripts/: make_doc_changelog.py
