[project]
name = "vagas-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.132.0",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytz>=2025.2",
    "sqlalchemy>=2.0.46",
]

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "radon>=6.0.1",
    "ruff>=0.15.2",
    "taskipy>=1.14.1",
]

[tool.uv]
upgrade = true

[tool.ruff]
line-length = 79
exclude = ["migrations"]

[tool.ruff.lint]
preview = true
select = [
    'I',  # isort
    'F',  # pyflakes
    'E',  # pycodestyle errors
    'W',  # pycodestyle warnings
    'PL', # pylint
    'PT', # flake8-pytest-style
]

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
addopts = '-p no:warnings'
asyncio_mode = 'auto'

[tool.coverage.run]
source = ["backend"]

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true

[tool.taskipy.tasks]
lint = 'uv run ruff check .; uv run ruff check . --diff; uv run radon cc ./backend -a -na'
format = 'ruff format .; ruff check . --fix'
radon = 'radon cc ./backend -a -na'
run = 'uv run fastapi dev backend/app/main.py'
test = 'pytest -s -x --cov=backend/app -v'
