[project]
name = "vagas-dev"
version = "0.1.0"
description = "API para busca de vagas de emprego para desenvolvedores e notificações de novas vagas."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.134.0",
    "hishel[async]>=1.1.9",
    "httpx>=0.28.1",
    "httpx-retries>=0.4.6",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyrate-limiter>=4.0.2",
    "pytz>=2025.2",
    "sqlalchemy>=2.0.46",
]

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "radon>=6.0.1",
    "respx>=0.22.0",
    "ruff>=0.15.4",
    "taskipy>=1.14.1",
    "testcontainers>=4.14.1",
]
doc = [
    "zensical>=0.0.24",
]

[tool.uv]
upgrade = true

[tool.ruff]
line-length = 79
exclude = ["migrations"]

[tool.ruff.lint]
preview = true
select = [
    'I',  # isort
    'F',  # pyflakes
    'E',  # pycodestyle errors
    'W',  # pycodestyle warnings
    'PL', # pylint
    'PT', # flake8-pytest-style
    'FAST', # fastapi-specific rules
]

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.ruff.lint.per-file-ignores]
'**/routes/*.py' = ['PLR0917', 'PLR0913', 'E501']
'scheduler.py' = ['E712']
'notifiers.py' = ['E712']
'gupy.py' = ['E501']
'**/tests/**/*.py' = ['E501']
'main.py' = ['E501']
'**/schemas/*.py' = ['E501']

[tool.pytest.ini_options]
addopts = '-p no:warnings'
asyncio_mode = 'auto'

[tool.coverage.run]
core = "ctrace"
concurrency = ["thread", "greenlet"]
source = ["backend"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "database.py",
]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true

[tool.taskipy.tasks]
lint = 'uv run ruff check .; uv run ruff check . --diff; uv run radon cc ./backend -a -na'
format = 'ruff format .; ruff check . --fix'
run = 'uv run uvicorn app.main:app --host 0.0.0.0 --port 8000 --workers 4 --app-dir backend'
dev = 'uv run uvicorn app.main:app --host 127.0.0.1 --port 8000 --workers 1 --app-dir backend --reload --log-level debug'
doc = 'uv run zensical serve --dev-addr localhost:3000 --open'
test = 'uv run pytest -s -x --cov=backend/app -v; coverage html'
sync = 'uv sync --all-groups'
export = 'uv export --no-hashes --no-dev -o requirements.txt'
